Source/WebCore/dom/Node.h
@@ -555,6 +555,7 @@ public:
     void dispatchSimulatedClick(PassRefPtr<Event> underlyingEvent, bool sendMouseEvents = false, bool showPressedLook = true);
 
     virtual void dispatchFocusEvent();
+    virtual void willBlur();
     virtual void dispatchBlurEvent();
     virtual void dispatchChangeEvent();
     virtual void dispatchInputEvent();
