Source/WebCore/html/NumberInputType.h
@@ -63,7 +63,7 @@ private:
     virtual double parseToDoubleWithDecimalPlaces(const String&, double, unsigned*) const;
     virtual String serialize(double) const;
     virtual double acceptableError(double) const;
-    virtual void handleBlurEvent();
+    virtual void willBlur();
     virtual String visibleValue() const;
     virtual String convertFromVisibleValue(const String&) const;
     virtual bool isAcceptableValue(const String&);
