third_party/WebKit/Source/WebCore/html/HTMLInputElement.cpp
@@ -497,10 +497,14 @@ void HTMLInputElement::handleFocusEvent()
         document()->setUseSecureKeyboardEntryWhenActive(true);
 }
 
+void HTMLInputElement::willBlur()
+{
+    m_inputType->willBlur();
+    HTMLTextFormControlElement::willBlur();
+}
+
 void HTMLInputElement::handleBlurEvent()
 {
-    m_inputType->handleBlurEvent();
-
     if (!isTextField())
         return;
     Frame* frame = document()->frame();
